change some styles in app

--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/Header/index.sass
@@ -3,6 +3,7 @@
   padding: 5%
   justify-content: space-between
   align-items: center
+  
   // >div 
   //   width:30%
     
@@ -104,15 +105,18 @@
 
 .title
 
+  width: 50%
   &__name
     margin: 5%
+  &__image
+    width: 30%
 
   &__user
     
     &--paragraph
       font-size: 14px
   &__name
-    font-size: 25px
+    font-size: 1.5rem
   
 .fa-user
   margin: 5px 5px
