--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/InitialHeader/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/InitialHeader/index.sass
@@ -2,8 +2,13 @@
 //Header principal main app
 
 .initial-header
- 
-    text-align: center
-    font-size: 25px
+    display: flex 
     border: 1px solid white
+    padding: 5%
+
+    &__image
+        width: 30%
+    &__text
+        text-align: center
+        font-size: 1.5rem
 
