--- a/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
+++ b/staff/felipe-fernandez/footcamp/footcamp-app/src/components/MyLeagues/index.sass
@@ -14,8 +14,9 @@
             margin-top: 2%
 
         &__name
+            font-size: 16px
             margin: 5%
-            color: black
+            color: white
 
         &__title
             text-align: center
