--- a/staff/nestor-llorens/skycaching/app/src/components/Footer/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/Footer/index.sass
@@ -7,5 +7,6 @@
         font-family: Lato, sans-serif
         color: #05386b
         font-weight: 700
-        padding: 21px
+        font-size: 12px
+        padding: 20px
         
