--- a/staff/nestor-llorens/skycaching/app/src/components/Header/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/Header/index.sass
@@ -6,11 +6,13 @@ $base-color: #05386b
     display: flex
     justify-content: space-between
     width: 100vw
+    margin-bottom: 2vh
 
     &__navbar
         display: flex
         justify-content: center
         align-content: center
+        padding-top: 4vh
 
     &__list
         display: flex
@@ -23,13 +25,14 @@ $base-color: #05386b
         color: $base-color
         font-family: Lato, sans-serif
         font-weight: 700
-        font-size: 14px
-
+        font-size: 12px
+    
         &-logout
             color: Crimson
             font-family: Lato, sans-serif
             font-weight: 700
-            font-style: 14px
+            font-size: 12px
+            margin-right: 1vh
 
     &__button
             background: none
@@ -37,10 +40,14 @@ $base-color: #05386b
             color: $base-color
             font-family: Lato, sans-serif
             font-weight: 700
-            font-size: 16px
+            font-size: 12px
+            padding-right: 1.5vh
+            button: focus {outline:0}
 
     &__title
+        diplay: flex
         font-family: 'Dancing Script', cursive  
-        font-size: 35px
+        font-size: 24px
         color: $base-color
-        padding-left: 0.4vh
+        padding-top: 2.5vh 
+        padding-left: 1vh
