--- a/staff/nestor-llorens/skycaching/app/src/components/Register/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/Register/index.sass
@@ -18,28 +18,30 @@ $fontFamily: Lato, sans-serif
         display: flex
         flex-direction: column
         justify-content: center
-        width: 50%
-        margin: 0 auto
+        margin: 0 
+        padding: 4vh
 
     &__form-button
-        font-size: 15px
+        font-size: 13px
         text-align: center
-        margin: 0 auto  
+        margin: 0 auto
         margin-top: 4vh
         border: 2px solid #05386b
         background: none
-        padding: 1em
+        padding: 1vh
         color: #05386b
         font-weight: 700
-        max-width: 50%
-        
+        width: 60%
 
     &__header
         text-align: center
+        margin-bottom: 1vh
+        font-size: 20px
 
     &__form-label
         font-weight: 700
-        margin-top: 0.5vh
+        font-size: 13px
+        margin-top: 1vh
         margin-bottom: 0.5vh
 
 
