--- a/staff/nestor-llorens/skycaching/app/src/components/App/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/App/index.sass
@@ -2,7 +2,7 @@
     padding: 0
     margin: 0
     box-sizing: border-box
-        
+
 @import ../Header/
 @import ../Landing/
 @import ../Footer/
@@ -10,3 +10,4 @@
 @import ../Login/
 @import ../MapHome/
 @import ../Profile/
+@import ../Details/
