--- a/staff/nestor-llorens/skycaching/app/src/components/MapHome/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/MapHome/index.sass
@@ -1,8 +1,22 @@
 .mapHome
-    height: 81vh
-    margin: 0 auto
-    margin-top: 1.3em
-    border: 2px solid #05386b
+    width: auto
+    height: 80vh
+    display: flex
 
-.map
-    height: 80.4vh
+// .map
+//     width: 100vh
+//     height: 80vh
+
+.map-profile
+    width: auto
+    height: 40vh
+    display: flex
+
+.popup__button
+    background: none
+    border: none
+    
+html, body, .map
+        height: 100%
+        width: 100%
+    
