--- a/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.css
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.css
@@ -357,4 +357,14 @@ li {
   color: #505050;
 }
 
+.feedback-section {
+  width: 60vw;
+  margin: 2rem auto;
+  padding: 0.8rem 0.8rem 0.8rem;
+  background-color: rgba(255, 0, 0, 0.8);
+  text-align: center;
+  color: white;
+  font-size: 0.8rem;
+}
+
 /*# sourceMappingURL=index.css.map */
