--- a/staff/roger-perez/goliath/goliath-app2/goliath/src/App.css
+++ b/staff/roger-perez/goliath/goliath-app2/goliath/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  color: red
+  
 }
 
 .App-logo {
@@ -16,7 +18,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color:black;
 }
 
 .App-link {
