add some final details to design

--- a/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Header/style.sass
@@ -30,7 +30,17 @@
   text-align: center
 
 .user-menu__auth-option-link:hover
-  background-color: rgb(113, 80, 147)
+  background-color: rgb(244, 154, 94)
+
+.user-menu__auth-option--to-post
+  display: block
+  padding: 5% 0
+  text-decoration: none
+  border: 1px solid white
+  background-color: #325526
+  color: white
+  font-size: 0.8em
+  text-align: center
 
 
 .header .header__logo 
@@ -67,7 +77,7 @@
     height:
   
   .user-menu__auth-option-link
-    //padding: 20px 30px
+    font-size: 1vw
 
   .header .user-menu
     clear: none
@@ -78,4 +88,4 @@
     display: none
 
   .header__logo
-    width: 40%
+    width: 30%
