--- a/staff/juan-bovo/vltra/vltra-app/src/components/Main/style.sass
+++ b/staff/juan-bovo/vltra/vltra-app/src/components/Main/style.sass
@@ -35,8 +35,6 @@ main
     padding: 1rem 1rem 0
     border: 1px solid lightgray
     border-radius: 10px
-    //height: 10em
-    //overflow: hidden
     margin: 10% auto
     background-color: white
     width: 90%
@@ -109,9 +107,6 @@ main
 .fa-star:hover
     color: gold
 
-.colorrojo
-    color: red
-
 @media (min-width: 48em)
     .mosaic-grid
         width: 80%
@@ -120,6 +115,9 @@ main
 
             &--content
                 font-size: 1.6em
+        
+        &__container
+            margin: 3% auto
 
 @media (min-width: 60em)
     .mosaic-grid
