--- a/staff/roger-perez/goliath/goliath-app2/goliath/src/index.css
+++ b/staff/roger-perez/goliath/goliath-app2/goliath/src/index.css
@@ -135,6 +135,26 @@ input {
   color: red;
 }
 
+input[type=checkbox]:after {
+  line-height: 1.5em;
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-top: -4px;
+  margin-left: -4px;
+  border: 1px solid silver;
+  border-radius: 0.25em;
+  background: #e0e0e0;
+  background-color: green;
+}
+
+input[type=checkbox]:checked:after {
+  width: 20px;
+  height: 20px;
+  border: 3px solid #00ff00;
+}
+
 .drumkit {
   width: 100%;
   height: 100vh;
