--- a/staff/jorge-garces/wannadog/wannadog-app/src/index.css
+++ b/staff/jorge-garces/wannadog/wannadog-app/src/index.css
@@ -20,6 +20,17 @@
   color: #323232;
 }
 
+.feedback__text {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: rgba(191, 8, 56, 0.2);
+  color: white;
+  padding: 0.1rem;
+  font-size: 0.8rem;
+}
+
 .to-profile {
   color: #323232;
 }
@@ -92,6 +103,7 @@ input {
   justify-content: center;
   align-items: center;
   border: 1px solid black;
+  text-transform: lowercase;
 }
 .button__sign {
   margin-top: 0.5rem;
@@ -99,6 +111,29 @@ input {
 .button:active {
   background-color: #347F93;
   color: white;
+}
+.button__contact {
+  margin-top: 3rem;
+}
+.button__fav {
+  margin-bottom: 2rem;
+}
+.button__add {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.button__chat {
+  font-size: 0.5rem;
+  align-self: center;
+  height: 1.5rem;
+  width: 2.5rem;
+}
+.button__delete {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.button__my-dogs {
+  margin-top: 2rem;
 }
 
 .signup {
@@ -144,7 +179,7 @@ input {
 
 .logout {
   margin-top: 3.5rem;
-  text-transform: uppercase;
+  text-transform: lowercase;
 }
 
 .detail {
@@ -176,6 +211,10 @@ input {
 }
 .detail__skills {
   margin-bottom: 1rem;
+}
+.detail__notes {
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 .dog-showcase {
@@ -210,8 +249,41 @@ input {
   color: #323232;
 }
 
-.add {
-  margin-top: 4rem;
+.lounge {
+  margin-top: 0.2rem;
+  align-self: center;
+  width: 100vw;
+  padding: 0.2rem;
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  align-content: center;
+}
+.lounge__icon {
+  font-size: 4rem;
+  color: #323232;
+}
+.lounge__text {
+  padding-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.lounge__date {
+  font-size: 0.5rem;
+  color: black;
+}
+.lounge__message {
+  font-size: 0.8rem;
+  color: #323232;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.message_showcase {
+  height: 82vh;
+  overflow: auto;
 }
 
 .navi {
@@ -245,11 +317,10 @@ input {
 .results__li {
   width: 100%;
   border: 0.1px solid #464646;
-  box-shadow: 3px 4px 5px 0px #8c8c8c;
 }
 .results__img {
-  width: 172px;
-  height: 172px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border: 1px solid black;
 }
@@ -267,7 +338,7 @@ input {
   color: rgba(0, 0, 0, 0.4);
 }
 .noresults__sign {
-  margin-top: 10rem;
+  margin-top: 8rem;
   font-size: 10rem;
 }
 .noresults__text {
@@ -305,6 +376,16 @@ select {
   height: 4rem;
 }
 
+.fa-camera-retro {
+  align-self: center;
+  font-size: 8rem;
+}
+
+.upload {
+  align-self: center;
+  border: none;
+}
+
 .chat-message {
   font-family: "Open Sans", sans-serif;
   flex-direction: column;
@@ -328,7 +409,12 @@ select {
   width: 49vw;
 }
 .chat-message__body {
-  width: 49vw;
+  text-align: justify;
+  text-justify: inter-word;
+  width: 80vw;
+}
+.chat-message__user {
+  font-weight: bold;
 }
 
 .success-container {
