--- a/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
+++ b/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
@@ -17,6 +17,17 @@
     font-size: 1.85rem
     color: rgb(50,50,50)
 
+.feedback__text
+    position: fixed
+    bottom: 0
+    width: 100%
+    text-align: center
+    background-color: rgba(191, 8, 56, 0.2)
+    color: white
+    padding: 0.1rem
+    font-size: 0.8rem
+
+
 .to-profile
     color: rgb(50,50,50)
 
@@ -59,9 +70,6 @@
     font-size: 3rem
     margin-bottom: 1rem
 
-.signup
-
-
 .form-section
     width: 60vw
     margin: auto
@@ -88,14 +96,30 @@ input
     text-decoration: none
     justify-content: center
     align-items: center  
-    border: 1px solid black  
+    border: 1px solid black
+    text-transform: lowercase
     &__sign
         margin-top: 0.5rem
     &:active
         background-color: #347F93
         color: white
-
-
+    &__contact
+        margin-top: 3rem
+    &__fav
+        margin-bottom: 2rem
+    &__add
+        margin-top: 2rem
+        margin-bottom: 2rem
+    &__chat
+        font-size: 0.5rem
+        align-self: center
+        height: 1.5rem
+        width: 2.5rem
+    &__delete
+        margin-top: 1.5rem
+        margin-bottom: 1.5rem
+    &__my-dogs
+        margin-top: 2rem
 
 .signup
     margin-top:1rem
@@ -137,7 +161,7 @@ input
 
 .logout
     margin-top: 3.5rem
-    text-transform: uppercase
+    text-transform: lowercase
 
 // DOG DETAIL
 .detail
@@ -163,6 +187,9 @@ input
         margin-bottom: 1rem
     &__skills
         margin-bottom: 1rem
+    &__notes
+        text-align: justify
+        text-justify: inter-word
 
 // DOG SHOWCASE
 
@@ -173,6 +200,7 @@ input
     border-bottom: 1px solid black
     border-top: 1px solid black
     margin-top: 1rem
+    // box-shadow: 3px 4px 5px 0px rgba(140,140,140,1)
     &__left
         width: 28vw
     &__right
@@ -192,8 +220,40 @@ input
      text-decoration: none
      color: rgb(50,50,50)
 
-.add
-    margin-top: 4rem
+// LOUNGE
+
+.lounge
+    margin-top: 0.2rem
+    align-self: center
+    width: 100vw
+    padding: 0.2rem
+    list-style-type: none
+    text-decoration: none
+    display: flex
+    align-content: center
+    &__icon
+        font-size: 4rem
+        color: rgb(50,50,50)
+    &__text
+        padding-top: 1rem
+        padding-left: 1rem
+        padding-right: 1rem
+        display: flex
+        flex-direction: column
+    &__date
+        font-size: 0.5rem
+        color: black
+    &__message
+        font-size: 0.8rem
+        color: rgb(50,50,50)
+        text-align: justify
+        text-justify: inter-word
+
+// MESSAGE SHOWCASE
+
+.message_showcase
+    height: 82vh
+    overflow: auto
 
 // SEARCH RESULTS
 
@@ -223,11 +283,11 @@ input
     &__li
         width: 100%
         border: 0.1px solid rgb(70,70,70)
-        box-shadow: 3px 4px 5px 0px rgba(140,140,140,1) 
+        // box-shadow: 3px 4px 5px 0px rgba(140,140,140,1) 
         
     &__img
-        width: 172px
-        height: 172px
+        width: 100%
+        height: 100%
         object-fit: cover
         border: 1px solid black
     &__name
@@ -242,7 +302,7 @@ input
     justify-self: center
     color: rgba(0,0,0,0.4)
     &__sign
-        margin-top: 10rem
+        margin-top: 8rem
         font-size: 10rem
     &__text
         margin-top: 2rem
@@ -271,6 +331,14 @@ select
     margin: 0.7rem 0
     height: 4rem
 
+.fa-camera-retro
+    align-self: center
+    font-size: 8rem
+
+.upload
+    align-self: center
+    border: none
+
 // Chat Messages
 
 .chat-message
@@ -292,7 +360,11 @@ select
     &__name
         width: 49vw
     &__body
-        width: 49vw
+        text-align: justify
+        text-justify: inter-word
+        width: 80vw
+    &__user
+        font-weight: bold
 
 // Dog Success
 
@@ -307,8 +379,3 @@ select
     background-image: url(#)
     &__register
         margin-bottom: 3rem
-
-
-
-        
-
