--- a/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.css
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.css
@@ -47,9 +47,13 @@ html {
 .main__h3 {
   width: 100vw;
   margin: 1rem 0;
-  color: #464646;
-  font-size: 1.5rem;
+  color: #787878;
+  font-size: 1.3rem;
   text-align: center;
+}
+.main__image {
+  width: 65%;
+  margin: 1rem 0;
 }
 
 .user__button {
