--- a/staff/carolina-lopez/menu-planner/menu-planner-app/src/style/compos.sass
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/src/style/compos.sass
@@ -41,9 +41,12 @@ html
   &__h3
     width: 100vw
     margin: 1rem 0
-    color: rgb(70,70,70)
-    font-size: 1.5rem
+    color: rgb(120,120,120)
+    font-size: 1.3rem
     text-align: center
+  &__image
+    width: 65%
+    margin: 1rem 0
 
 .user__button
     width: 80vw
