--- a/staff/roger-perez/goliath/goliath-app/src/index.css
+++ b/staff/roger-perez/goliath/goliath-app/src/index.css
@@ -139,20 +139,20 @@ input[type=checkbox]:after {
   line-height: 1.5em;
   content: "";
   display: inline-block;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   margin-top: -4px;
   margin-left: -4px;
   border: 1px solid silver;
   border-radius: 0.25em;
-  background: #e0e0e0;
-  background-color: green;
+  background-color: #4E8236;
 }
 
 input[type=checkbox]:checked:after {
-  width: 20px;
-  height: 20px;
-  border: 3px solid #00ff00;
+  width: 22px;
+  height: 22px;
+  border: 3px solid #4E8236;
+  background-image: radial-gradient(white, green);
 }
 
 .drumkit {
