--- a/staff/nestor-llorens/skycaching/app/src/components/Profile/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/Profile/index.sass
@@ -83,4 +83,7 @@ $fontFamily: Lato, sans-serif
 
 .popup__button
     background: none
+    color: #05386b
     border: none
+    font-weight: 700
+    font-family: $fontFamily
