--- a/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
+++ b/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
@@ -191,6 +191,7 @@ input
         text-align: justify
         text-justify: inter-word
 
+
 // DOG SHOWCASE
 
 .dog-showcase
@@ -275,6 +276,7 @@ input
     &__ul
         display: grid
         grid-template-columns: 1fr 1fr
+        grid-auto-rows: min-content
         margin: auto
         columns: 2
         grid-gap: 0.5rem
