--- a/staff/jorge-garces/wannadog/wannadog-app/src/index.css
+++ b/staff/jorge-garces/wannadog/wannadog-app/src/index.css
@@ -308,6 +308,7 @@ input {
 .results__ul {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-auto-rows: min-content;
   margin: auto;
   columns: 2;
   grid-gap: 0.5rem;
