--- a/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
+++ b/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
@@ -191,6 +191,10 @@ input
         text-align: justify
         text-justify: inter-word
 
+.inlove
+    text-align: center
+    padding: 2rem
+
 
 // DOG SHOWCASE
 
