--- a/staff/jorge-garces/wannadog/wannadog-app/src/index.css
+++ b/staff/jorge-garces/wannadog/wannadog-app/src/index.css
@@ -326,7 +326,7 @@ input {
 }
 .results__img {
   width: 100%;
-  height: 100%;
+  height: 172.13px;
   object-fit: cover;
   border: 1px solid black;
 }
