--- a/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
+++ b/staff/jorge-garces/wannadog/wannadog-app/src/index.sass
@@ -293,7 +293,7 @@ input
         
     &__img
         width: 100%
-        height: 100%
+        height: 172.13px
         object-fit: cover
         border: 1px solid black
     &__name
