--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Footer/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Footer/index.sass
@@ -19,13 +19,13 @@
             font-size: .75rem
         &__link
             text-decoration: none
-            color: grey
+            color: $link-text-color
             font-size: .75rem
         &__link:hover, .fab:hover
-            color: deeppink
+            color: $primary-hover-color
             
     .fab
         text-decoration: none
-        color: black
+        color: $primary-button-color
         font-size: .85rem
         margin: auto -2em auto 2em 
