--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/RegisterSuccess/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/RegisterSuccess/index.sass
@@ -3,6 +3,6 @@
 
     &__link
         text-decoration: none
-        color: deeppink
+        color: $primary-hover-color
     &__link:hover
-        color: grey
+        color: $link-text-color
