--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/TaskRegister/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/TaskRegister/index.sass
@@ -1,53 +1,37 @@
-@media (max-width: 840px) 
-        .task-register
-        padding: 0
-        text-align: center
+.task-register
+    padding: 0
+    text-align: center
 
-        &__title
-            font-family: Helvetica, Roboto, sans-serif
-            font-size: 2rem
-            margin-bottom: 2em
-        &__form-item
-            list-style: none
-            margin: 1em auto
-        &__form-input
-            padding: .5em
-            width: 100%
-        &__form-button
-            background-color: black
-            color: white
-            text-align: center
-            margin: 1em auto 3em auto
-            border: none
-            padding: .5em
-        &__back-link
-            text-decoration: none
-            color: grey
-            margin: auto
-        &__back-link:hover
-            color: deeppink
+    &__title
+        font-family: Helvetica, Roboto, sans-serif
+        font-size: 2rem
+        margin-bottom: 2em
+    &__form-item
+        list-style: none
+        margin: 1em auto
+    &__form-input
+        padding: .5em
+        width: 100%
+    &__form-button
+        background-color: $primary-button-color
+        color: white
+        text-align: center
+        margin: 1em auto 3em auto
+        border: none
+        padding: .5em
+    &__back-link
+        text-decoration: none
+        color: $link-text-color
+        margin: auto
+    &__back-link:hover
+        color: $primary-hover-color
 
 @media (min-width: 840px) 
     .task-register
         padding: 1em 4em
 
-        &__title
-            font-family: Helvetica, Roboto, sans-serif
-            font-size: 2rem
-            text-align: center
-        &__form-item
-            list-style: none
-            margin: 1em
         &__form-input
-            padding: .5em
             width: 65%
-        &__form-button
-            background-color: black
-            color: white
-            text-align: center
-            margin-bottom: 3em
-            border: none
-            padding: .5em
         &__typeSelector
             text-align: left
             margin: 2em auto 1em auto
@@ -57,8 +41,3 @@
             margin: auto
             padding: .5em
             width: 65%
-        &__back-link
-            text-decoration: none
-            color: grey
-        &__back-link:hover
-            color: deeppink
