--- a/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
+++ b/staff/carolina-zhou/e-cohabitat/e-cohabitat-app/src/components/Week/index.sass
@@ -1,178 +1,120 @@
-@media (max-width: 840px) 
-    .week
-        margin: 0
+.week
+    margin: 0
+    text-align: center
+    &__header
+        display: flex
+        justify-content: center
+    &__title
+        display: initial
+        font-family: Helvetica, Roboto, sans-serif
+        font-size: 1.2rem
+    &__month-year
+        font-size: 1rem
+        font-weight: normal
+        margin-top: 1em
+    &__act
+        display: flex
+        flex-direction: column
+    &__toolbar
+        display: flex
+        justify-content: center
+        flex-direction: column
+        align-items: stretch
+        margin: 24px 0
+    &__toggle
+        display: grid
+        grid-template-columns: 1fr 1fr 1fr
         text-align: center
-        &__header
-            display: flex
-            justify-content: center
-        &__title
-            display: initial
-            font-family: Helvetica, Roboto, sans-serif
-            font-size: 1.2rem
-        &__month-year
-            font-size: 1rem
-            font-weight: normal
-            margin-top: 1em
-        &__act
-            display: flex
-            flex-direction: column
-        &__activity
-            display: flex
-            flex-direction: column
-        &__toolbar
-            display: flex
-            justify-content: center
-            flex-direction: column
-            align-items: stretch
-            margin: 24px 0
-        &__toggle
-            display: grid
-            grid-template-columns: 1fr 1fr 1fr
-            text-align: center
-            font-size: 0.9em
-        &__toggle-option
-            border: 1px solid lightgrey
-            border-radius: 0
-            padding: .75em
-            cursor: pointer
-        &__toggle-option:first-child
-            border-right: none
-        &__toggle-option:last-child
-            border-left: none
-        &__toggle-option--selected
-            font-weight: bold
-            color: deeppink
-        &__search-input, .fa-search
-            display: none
-
-    .weekly
-        margin: 1em 0
+        font-size: 0.9em
+    &__toggle-option
         border: 1px solid lightgrey
-        width: 100%
+        border-radius: 0
+        padding: .75em
+        cursor: pointer
+    &__toggle-option:first-child
+        border-right: none
+    &__toggle-option:last-child
+        border-left: none
+    &__toggle-option--selected
+        font-weight: bold
+        color: deeppink
+    &__search-input, .fa-search
+        display: none
 
-        &__week, &__header 
-            display: grid
-            grid-template-columns: repeat(7, 1fr)
-        &__week
-            grid-auto-rows: 700px
-            text-align: right
-        &__header 
-            grid-auto-rows: 50px
-            align-items: center
-            text-align: center
-        &__day 
-            font-size: .75rem
-            color: grey
-            padding: 16px
-            border-right: 1px solid lightgrey
-            border-top: 1px solid lightgrey
-        &__day:hover
-            background-color:#f1f1f1
-        &__day:last-child 
-            border-right: 0
-        &__tasks
-            margin-top: 1em
-            display: flex
-            flex-direction: column
-        &__task
-            display: flex
-        &__task-name
-            display: none
-        &__header > div 
-            text-transform: uppercase
-            font-size: 0.75em
-            font-weight: bold
+.weekly
+    margin: 1em 0
+    border: 1px solid lightgrey
+    width: 100%
+
+    &__week, &__header 
+        display: grid
+        grid-template-columns: repeat(7, 1fr)
+    &__week
+        grid-auto-rows: 700px
+        text-align: right
+    &__header 
+        grid-auto-rows: 50px
+        align-items: center
+        text-align: center
+    &__day 
+        font-size: .6rem
+        color: grey
+        padding: 10px
+        border-right: 1px solid lightgrey
+        border-top: 1px solid lightgrey
+    &__day:hover
+        background-color:#f1f1f1
+    &__day:last-child 
+        border-right: 0
+    &__tasks
+        margin-top: 1em
+        display: flex
+        flex-direction: column
+    &__task
+        display: flex
+    &__task-name
+        display: none
+    &__header > div 
+        text-transform: uppercase
+        font-size: 0.75em
+        font-weight: bold
             
+
 @media (min-width: 840px) 
     .week
-        margin: 0
         &__header
             margin: auto
             display: flex
             justify-content: space-between
             width: 30%
         &__title
-            display: initial
-            font-family: Helvetica, Roboto, sans-serif
             font-size: 2rem
         &__month-year
             font-size: 1.2rem
-            font-weight: normal
-            margin-top: 1em
         &__act
             display: flex
+            flex-direction: row
             padding: 0
-        &__activity
-            display: flex
-            flex-direction: column
-            width: 20%
-        &__chores, &__tags
-            text-align: left
-        &__list-title
-            font-size: 2rem
-        &__list
-            list-style: none
         &__toolbar
             display: flex
+            flex-direction: row
             justify-content: space-between
             align-items: center
             margin-bottom: 24px
-        &__toggle
-            display: grid
-            grid-template-columns: 1fr 1fr 1fr
-            text-align: center
-            font-size: 0.9em
-        &__toggle-option
-            border: 1px solid lightgrey
-            border-radius: 0
-            padding: .75em
-            cursor: pointer
-        &__toggle-option:first-child
-            border-right: none
-        &__toggle-option:last-child
-            border-left: none
-        &__toggle-option--selected
-            font-weight: bold
-            color: deeppink
         &__search-input
+            display: initial
             font-size: .75rem
             padding: .75em
+        .fa-search
+            display: initial
+            font-size: 1rem
 
     .weekly
         margin: 1em 0 5em 0
-        border: 1px solid lightgrey
-        width: 100%
 
-        &__week, &__header 
-            display: grid
-            grid-template-columns: repeat(7, 1fr)
-        &__week
-            grid-auto-rows: 700px
-            text-align: right
-        &__header 
-            grid-auto-rows: 50px
-            align-items: center
-            text-align: center
-        &__day 
-            font-size: .75rem
-            color: grey
-            padding: 16px
-            border-right: 1px solid lightgrey
-            border-top: 1px solid lightgrey
-        &__day:hover
-            background-color:#f1f1f1
-        &__day:last-child 
-            border-right: 0
-        &__tasks
-            margin-top: 1em
-            display: flex
-            flex-direction: column
-        &__task
-            display: flex
         &__task-name
+            display: initial
             font-size: 13px
             padding-left: 5px
         &__header > div 
-            text-transform: uppercase
             font-size: 0.8em
-            font-weight: bold
