added JSdoc, version 1.0 deployed

--- a/staff/nestor-llorens/skycaching/app/src/components/App/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/App/index.sass
@@ -3,6 +3,29 @@
     margin: 0
     box-sizing: border-box
 
+.login
+    width: 50%
+    margin: 3vh auto 
+.register
+    width: 50%
+    margin: 3vh auto
+
+@media (min-width: 768px)
+    .profile
+        width: 50%
+        margin: 3vh auto
+    .details
+        width: 50%
+        margin: 3vh auto
+    .login
+        width: 33%
+        margin: 3vh auto
+    .register
+        width: 33%
+        margin: 3vh auto 
+
+     
+
 @import ../Header/
 @import ../Landing/
 @import ../Footer/
