--- a/staff/nestor-llorens/skycaching/app/src/components/Footer/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/Footer/index.sass
@@ -1,5 +1,5 @@
 .footer
-    width: 100vw
+    // width: 100vw
     height: 10vh
 
     &__paragraph
@@ -7,6 +7,6 @@
         font-family: Lato, sans-serif
         color: #05386b
         font-weight: 700
-        font-size: 12px
+        font-size: 14px
         padding: 20px
         
