--- a/staff/nestor-llorens/skycaching/app/src/components/Details/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/Details/index.sass
@@ -5,16 +5,16 @@ $fontFamily: Lato, sans-serif
     display: flex
     flex-direction: column
     padding: 4vh
-    width: 100%
     font-family: $fontFamily
     color: $base-color
     margin-bottom: 2vh
 
     &__list
-        font-size: 12px
+        font-size: 14px
         list-style: none
         display: flex
         flex-direction: column
+        font-weight: 700
 
         &-item
             margin-bottom: 0.6vh
@@ -27,14 +27,14 @@ $fontFamily: Lato, sans-serif
         flex-direction: column
 
     &__comment
-        font-size: 12px
+        font-size: 14px
         list-style: none
         display: flex
         flex-direction: column
 
         &-title
             margin: 2vh
-            font-size: 15px
+            font-size: 16px
     
         &-list
             padding: 0.8vh
@@ -42,7 +42,7 @@ $fontFamily: Lato, sans-serif
             border: 0.1px solid black
             margin-bottom: 1vh
         &-button
-            font-size: 12px
+            font-size: 14px
             display: flex
             justify-content: center
             text-align: center
