--- a/staff/nestor-llorens/skycaching/app/src/components/Profile/index.sass
+++ b/staff/nestor-llorens/skycaching/app/src/components/Profile/index.sass
@@ -14,18 +14,19 @@ $fontFamily: Lato, sans-serif
             margin-bottom: 0.5vh
         &-list
             padding: 0.6vh
-            border: 1px solid #05386b
-            font-size: 12px
+            border: 1.5px solid #05386b
+            font-size: 14px
             list-style: none
             display: flex
             flex-direction: row
             justify-content: space-between
             margin-bottom: 0.7vh
+            font-weight: 700
         &-buttons
             display: flex
 
         &-detailsCache
-            font-size: 12px
+            font-size: 14px
             margin-right: 1vh
             text-align: center
             border: none
@@ -35,7 +36,7 @@ $fontFamily: Lato, sans-serif
             font-weight: 700
 
         &-deleteCache
-            font-size: 12px
+            font-size: 14px
             text-align: end
             border: none
             background: none
@@ -50,9 +51,10 @@ $fontFamily: Lato, sans-serif
         font-size: 14px
         margin-bottom: 0.5vh
     &-form
-        border: 1.3px solid black
+        border: 1.5px solid #05386b
         margin-bottom: 0.5vh
-        font-size: 12px
+        font-size: 14px
+        font-weight: 700
         padding: 0.6vh
         display: flex
         flex-direction: column
@@ -70,7 +72,7 @@ $fontFamily: Lato, sans-serif
         margin-left: 0.8vh
 
     &-create
-        font-size: 12px
+        font-size: 14px
         text-align: center
         margin: 0 auto  
         margin-top: 1.5vh
