add modified files

--- a/staff/carolina-lopez/menu-planner/menu-planner-app/src/components/CurrentWeek/index.sass
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/src/components/CurrentWeek/index.sass
@@ -21,12 +21,16 @@
   &__day-meal
     width: 100%
     margin: 0.5rem auto
-    font-size: 1.1rem
+    font-size: 1rem
   &__day-img
     width: 40%
   &__day-title
     width: 60%
     padding: 1rem
+    font-size: 1rem
+  &__day-warn
+    padding-left: 0.5rem
+    color: #E85A4F
     font-size: 1rem
 li
   list-style: none
