--- a/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.css
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/src/index.css
@@ -228,7 +228,7 @@ input {
 }
 .recipe__text {
   margin: 0 0 1rem 0;
-  font-size: 1em;
+  font-size: 0.9rem;
   padding: 1rem;
   color: #505050;
 }
@@ -289,7 +289,7 @@ input {
 .week__day-meal {
   width: 100%;
   margin: 0.5rem auto;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 .week__day-img {
   width: 40%;
@@ -297,6 +297,11 @@ input {
 .week__day-title {
   width: 60%;
   padding: 1rem;
+  font-size: 1rem;
+}
+.week__day-warn {
+  padding-left: 0.5rem;
+  color: #E85A4F;
   font-size: 1rem;
 }
 
