--- a/staff/carolina-lopez/menu-planner/menu-planner-app/src/style/recipe.sass
+++ b/staff/carolina-lopez/menu-planner/menu-planner-app/src/style/recipe.sass
@@ -39,6 +39,6 @@
     margin: 0.5rem auto 
   &__text
     margin: 0 0 1rem 0
-    font-size: 1em
+    font-size: 0.9rem
     padding: 1rem
     color: rgb(80,80,80)
